fix alignment for ballata_mezzana

--- a/css/custom.css
+++ b/css/custom.css
@@ -645,9 +645,9 @@ lg[type='ballata_grande'] l[n='5'],
 lg[type='ballata_grande'] l[n='6'],
 lg[type='ballata_grande'] l[n='9'],
 lg[type='ballata_grande'] l[n='10'],
-lg[type='ballata_mezzana'] l[n='3'],
+/* lg[type='ballata_mezzana'] l[n='3'],
 lg[type='ballata_mezzana'] l[n='8'],
-lg[type='ballata_mezzana'] l[n='9'], 
+lg[type='ballata_mezzana'] l[n='9'], */
 lg[type='canzone_7vv'] l[n='7'],
 lg[type='canzone_7vv'] l[n='14'],
 lg[type='canzone_7vv'] l[n='21'],
